--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <artifactId>commons-codec</artifactId>
         </dependency>
 
+        <!-- Json与类的转化依赖包 -->
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>org.springframework.session</groupId>-->
         <!--<artifactId>spring-session-core</artifactId>-->
@@ -72,6 +80,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>14.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
