--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>14.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--Jpa orm框架-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -65,11 +72,20 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- Java对象和xml文档相互转换 -->
+        <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.11.1</version>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>org.springframework.session</groupId>-->
         <!--<artifactId>spring-session-core</artifactId>-->
         <!--</dependency>-->
 
+        <!-- springboot 自带的测试依赖包 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -80,12 +96,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java</artifactId>
-            <version>14.0</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
