--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <version>1.4.11.1</version>
         </dependency>
 
+        <!--添加fastjson依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
+
         <!--<dependency>-->
         <!--<groupId>org.springframework.session</groupId>-->
         <!--<artifactId>spring-session-core</artifactId>-->
